--- a/tindog/style.css
+++ b/tindog/style.css
@@ -11,6 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   color: #8f8f8f;
+  font-size: 22px;
 }
 
 /* headdings */
@@ -86,6 +87,24 @@ p {
     text-align: center;
   } 
 
+  
+    h3{
+  padding: 0;    
+  font-size: 40px;
+}
+
+    p{
+      padding: 0;
+  font-size: 35px;
+}
+
+
+  .feature-box {
+    margin-top: 20px;
+    padding-left: 25px;
+    padding-right: 30px;
+  }
+  
 .press-logo {
  
    margin: 20px 10px 50px;
